tried fixing the images not showing

--- a/src/App.css
+++ b/src/App.css
@@ -212,7 +212,7 @@ div.topbar {
 }
 .navDesign {
   position: absolute;
-  top: 90vh;
+  bottom: 0;
 }
 
 .welcomepage {
@@ -251,7 +251,7 @@ div.topbar {
 
 .items {
   height: 30vh;
-  width: 10vw;
+  width: 11vw;
   background-color: #f84882;
   border-radius: 1rem;
 }
@@ -280,7 +280,7 @@ div.topbar {
 .items hr {
   border-color: antiquewhite;
   margin: 1rem 2rem 0 2rem;
-  width: 5vw;
+  width: 6vw;
 }
 
 .items p {
